[gd_scene load_steps=78 format=2]

[ext_resource path="res://Scenes/KinematicScenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/Player/Slide1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/Player/Slide2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/Player/Slide3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/Player/Slide4.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Player/Slide5.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/Player/Idle1.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/Player/Idle3.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/Player/Idle4.png" type="Texture" id=9]
[ext_resource path="res://Resources/Sprites/Player/Idle5.png" type="Texture" id=10]
[ext_resource path="res://Resources/Sprites/Player/Idle6.png" type="Texture" id=11]
[ext_resource path="res://Resources/Sprites/Player/Idle7.png" type="Texture" id=12]
[ext_resource path="res://Resources/Sprites/Player/Idle8.png" type="Texture" id=13]
[ext_resource path="res://Resources/Sprites/Player/Idle9.png" type="Texture" id=14]
[ext_resource path="res://Resources/Sprites/Player/Idle10.png" type="Texture" id=15]
[ext_resource path="res://Resources/Sprites/Player/Dead.png" type="Texture" id=16]
[ext_resource path="res://Resources/Sprites/Player/Dead2.png" type="Texture" id=17]
[ext_resource path="res://Resources/Sprites/Player/Dead3.png" type="Texture" id=18]
[ext_resource path="res://Resources/Sprites/Player/Dead4.png" type="Texture" id=19]
[ext_resource path="res://Resources/Sprites/Player/Dead5.png" type="Texture" id=20]
[ext_resource path="res://Resources/Sprites/Player/Dead6.png" type="Texture" id=21]
[ext_resource path="res://Resources/Sprites/Player/Dead7.png" type="Texture" id=22]
[ext_resource path="res://Resources/Sprites/Player/Dead8.png" type="Texture" id=23]
[ext_resource path="res://Resources/Sprites/Player/Dead9.png" type="Texture" id=24]
[ext_resource path="res://Resources/Sprites/Player/Dead10.png" type="Texture" id=25]
[ext_resource path="res://Resources/Sprites/Player/Jump1.png" type="Texture" id=26]
[ext_resource path="res://Resources/Sprites/Player/Jump2.png" type="Texture" id=27]
[ext_resource path="res://Resources/Sprites/Player/Jump3.png" type="Texture" id=28]
[ext_resource path="res://Resources/Sprites/Player/Jump4.png" type="Texture" id=29]
[ext_resource path="res://Resources/Sprites/Player/Jump5.png" type="Texture" id=30]
[ext_resource path="res://Resources/Sprites/Player/Jump6.png" type="Texture" id=31]
[ext_resource path="res://Resources/Sprites/Player/Jump7.png" type="Texture" id=32]
[ext_resource path="res://Resources/Sprites/Player/Jump8.png" type="Texture" id=33]
[ext_resource path="res://Resources/Sprites/Player/Jump9.png" type="Texture" id=34]
[ext_resource path="res://Resources/Sprites/Player/Jump10.png" type="Texture" id=35]
[ext_resource path="res://Resources/Sprites/Player/Run1.png" type="Texture" id=36]
[ext_resource path="res://Resources/Sprites/Player/Run2.png" type="Texture" id=37]
[ext_resource path="res://Resources/Sprites/Player/Run8.png" type="Texture" id=38]
[ext_resource path="res://Resources/Sprites/Player/Run3.png" type="Texture" id=39]
[ext_resource path="res://Resources/Sprites/Player/Run4.png" type="Texture" id=40]
[ext_resource path="res://Resources/Sprites/Player/Run5.png" type="Texture" id=41]
[ext_resource path="res://Resources/Sprites/Player/Run6.png" type="Texture" id=42]
[ext_resource path="res://Resources/Sprites/Player/Run7.png" type="Texture" id=43]
[ext_resource path="res://Resources/Sprites/Player/Shoot1.png" type="Texture" id=44]
[ext_resource path="res://Resources/Sprites/Player/Shoot2.png" type="Texture" id=45]
[ext_resource path="res://Resources/Sprites/Player/Shoot3.png" type="Texture" id=46]
[ext_resource path="res://Resources/Sprites/Player/Melee1.png" type="Texture" id=47]
[ext_resource path="res://Resources/Sprites/Player/Melee2.png" type="Texture" id=48]
[ext_resource path="res://Resources/Sprites/Player/Melee3.png" type="Texture" id=49]
[ext_resource path="res://Resources/Sprites/Player/Melee4.png" type="Texture" id=50]
[ext_resource path="res://Resources/Sprites/Player/Melee5.png" type="Texture" id=51]
[ext_resource path="res://Resources/Sprites/Player/Melee6.png" type="Texture" id=52]
[ext_resource path="res://Resources/Sprites/Player/Melee7.png" type="Texture" id=53]
[ext_resource path="res://Scenes/KinematicScenes/Player/CameraShake.gd" type="Script" id=54]
[ext_resource path="res://Resources/AudioFiles/Shots/pistol.wav" type="AudioStream" id=55]
[ext_resource path="res://Resources/AudioFiles/Shots/cg1.wav" type="AudioStream" id=56]
[ext_resource path="res://icon.png" type="Texture" id=57]
[ext_resource path="res://Resources/Sprites/TouchIcons/bullet1.png" type="Texture" id=58]
[ext_resource path="res://Resources/Sprites/TouchIcons/knife.png" type="Texture" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "slide",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "hurt",
"speed": 50.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": false,
"name": "attack",
"speed": 35.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": false,
"name": "melee",
"speed": 15.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": false,
"name": "fall",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.6555, 2.25755 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.6588, 44.1096 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 57 )
region = Rect2( 6, 7, 57, 58 )

[sub_resource type="AtlasTexture" id=5]
region = Rect2( 236, 246, 104, 104 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 52.12, 52.35 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 57 )
region = Rect2( 2, 0, 64, 66 )

[sub_resource type="AtlasTexture" id=8]
region = Rect2( 9, 246, 104, 104 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 52, 52 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 57 )
region = Rect2( 0, 1, 63, 63 )

[sub_resource type="AtlasTexture" id=11]
region = Rect2( 120, 132, 104, 104 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 52, 52 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 57 )
region = Rect2( -4, 1, 69, 60 )

[sub_resource type="AtlasTexture" id=14]
region = Rect2( 122, 360, 104, 104 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 52, 52 )

[sub_resource type="AtlasTexture" id=16]
region = Rect2( 489, 351, 104, 104 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 52, 52 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 52, 52 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 238.902, 145.127 )
scale = Vector2( 1.05064, 0.86244 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -34.8774, -44.5992 )
scale = Vector2( 0.193461, 0.213479 )
frames = SubResource( 1 )
animation = "melee"
frame = 3
centered = false
flip_h = true

[node name="collision_2" type="CollisionShape2D" parent="."]
position = Vector2( 32.7234, 58.5418 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 33.2543, 11.5777 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 98.6904, 16.2423 )

[node name="player_dead_timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 7.70665, 15.6282 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 56.303, -10.4915, 60.6048, -11.9254, 63.1142, -9.41606, 65.6236, -5.83121, 69.567, -1.1709, 73.5103, 5.64032, 72.9025, 11.6683, 71.7728, 19.576, 65.4466, 31.7765, 63.1142, 32.8852, 61.3218, 35.0361, 58.8124, 28.5834, 60.2464, 25.7155, 62.3973, 20.3382, 64.091, 13.2498, 62.7558, 5.99881, 60.2464, -3.32181, 57.3785, -7.26515 )
disabled = true

[node name="mele_flip_h_true" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -0.110915, 11.4617 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="mele_flip_h_true"]
polygon = PoolVector2Array( -12.1676, 26.791, -14.1037, 22.8471, -16.3044, 13.1644, -15.4241, 4.36185, -15.394, -1.1709, -13.2431, -3.68028, -17.5449, -6.54817, -21.8468, 0.621536, -24.2266, 7.44273, -21.5859, 22.8471, -19.6958, 27.1494, -16.4695, 31.4513, -13.9601, 33.9606 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 17.6143, 12.2646 )
current = true
limit_left = 1200
limit_top = 0
limit_right = 3700
limit_bottom = 1000
smoothing_enabled = true
script = ExtResource( 54 )

[node name="jump_counter_time" type="Timer" parent="."]
wait_time = 11.81
one_shot = true

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 55 )
volume_db = -2.35

[node name="ShotGun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 56 )

[node name="Controller" type="CanvasLayer" parent="."]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="Node2D" type="Node2D" parent="Controller"]
position = Vector2( -1.00067, 1.51772 )
z_index = 8

[node name="right" type="TouchScreenButton" parent="Controller/Node2D"]
position = Vector2( 109.537, 317.155 )
scale = Vector2( 0.473972, 0.494469 )
normal = SubResource( 4 )
pressed = SubResource( 5 )
shape = SubResource( 6 )
shape_visible = false

[node name="left" type="TouchScreenButton" parent="Controller/Node2D"]
position = Vector2( 47.2494, 316.439 )
scale = Vector2( 0.461539, 0.494469 )
normal = SubResource( 7 )
pressed = SubResource( 8 )
shape = SubResource( 9 )
shape_visible = false

[node name="up" type="TouchScreenButton" parent="Controller/Node2D"]
position = Vector2( 75.8045, 280.418 )
scale = Vector2( 0.56277, 0.538097 )
normal = SubResource( 10 )
pressed = SubResource( 11 )
shape = SubResource( 12 )
shape_visible = false

[node name="down" type="TouchScreenButton" parent="Controller/Node2D"]
position = Vector2( 76.4222, 354.094 )
scale = Vector2( 0.497398, 0.570357 )
normal = SubResource( 13 )
pressed = SubResource( 14 )
shape = SubResource( 15 )
shape_visible = false

[node name="gun_shoot" type="TouchScreenButton" parent="Controller/Node2D"]
position = Vector2( 517.716, 283.706 )
scale = Vector2( 0.461539, 0.428608 )
normal = SubResource( 16 )
pressed = SubResource( 16 )
shape = SubResource( 17 )
shape_visible = false

[node name="bullet1" type="Sprite" parent="Controller/Node2D/gun_shoot"]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 55.063, 49.5713 )
rotation = -0.785398
scale = Vector2( 0.1, 0.09 )
texture = ExtResource( 58 )

[node name="melee_attack" type="TouchScreenButton" parent="Controller/Node2D"]
position = Vector2( 475.645, 338.56 )
scale = Vector2( 0.444053, 0.412627 )
normal = SubResource( 16 )
pressed = SubResource( 16 )
shape = SubResource( 18 )
shape_visible = false

[node name="knife" type="Sprite" parent="Controller/Node2D/melee_attack"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 53.4536, 52.6831 )
rotation = 0.785398
scale = Vector2( 0.199, 0.123 )
texture = ExtResource( 59 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="player_dead_timer" to="." method="_on_player_dead_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="mele_flip_h_true" to="." method="_on_mele_flip_h_true_body_entered"]
[connection signal="timeout" from="jump_counter_time" to="." method="_on_jump_counter_time_timeout"]
[connection signal="pressed" from="Controller/Node2D/right" to="." method="_on_right_pressed"]
[connection signal="released" from="Controller/Node2D/right" to="." method="_on_right_released"]
[connection signal="pressed" from="Controller/Node2D/left" to="." method="_on_left_pressed"]
[connection signal="released" from="Controller/Node2D/left" to="." method="_on_left_released"]
[connection signal="pressed" from="Controller/Node2D/up" to="." method="_on_up_pressed"]
[connection signal="released" from="Controller/Node2D/up" to="." method="_on_up_released"]
[connection signal="pressed" from="Controller/Node2D/down" to="." method="_on_down_pressed"]
[connection signal="released" from="Controller/Node2D/down" to="." method="_on_down_released"]
[connection signal="pressed" from="Controller/Node2D/gun_shoot" to="." method="_on_gun_shoot_pressed"]
[connection signal="released" from="Controller/Node2D/gun_shoot" to="." method="_on_gun_shoot_released"]
[connection signal="pressed" from="Controller/Node2D/melee_attack" to="." method="_on_melee_attack_pressed"]
[connection signal="released" from="Controller/Node2D/melee_attack" to="." method="_on_melee_attack_released"]
